# gdx-config-validator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  ENHANCEMENTS.md  README.md  USAGE_EXAMPLES.md  index.md
src/examples/: basic_validation_example.py
src/gdx_config_validator/: __init__.py  config.py  core.py  factory.py  logging_adapter.py  parsers.py  results.py  utils.py  validators.py
src/gdx_config_validator/schemas/: operations.py
src/tests/: README.md  conftest.py  test.yaml  test_enhanced_logging.py  test_operations.py  test_security.py  test_yaml_validation.py
